--- a/Ejercicio1/Ejercicio1.html
+++ b/Ejercicio1/Ejercicio1.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img width="320px" src="benzema.jpg">
+    <img width="320px" src="benzema.jpg">
     <audio controls>
         <source src="mario.mp3" type="audio/mpeg">
     </audio>
