--- a/02.juegocartas/02.juegoparejas.html
+++ b/02.juegocartas/02.juegoparejas.html
@@ -98,7 +98,7 @@
             <div class="cartas" id="carta11"></div>
             <div class="cartas" id="carta12"></div>
         </div>
-        <div class="descripcion" id="desc">
+        <div id="desc" class="descripcion" >
             <p>Esto es un juego de carta para ejercitar la memoria</p>
             <button id="mostrarDesc">Mostrar descripcion</button>
         </div>
