--- a/02.juegocartas/02.juegoparejas.html
+++ b/02.juegocartas/02.juegoparejas.html
@@ -29,7 +29,7 @@
     <hr>
 
     <div class="puntuacion">
-        <div>
+        <div class="nombresUsu">
             <table>
                 <tr>
                     <th width="75px" rowspan="2">
