--- a/02.juegocartas/02.juegoparejas.html
+++ b/02.juegocartas/02.juegoparejas.html
@@ -11,7 +11,7 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="favi.png" type="image/png" />
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos/estilos.css">
     <title>Juego de Cartas</title>
    
 </head>
