--- a/02.juegocartas/02.juegoparejas.html
+++ b/02.juegocartas/02.juegoparejas.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="favi.png" type="image/png" />
+    <link rel="icon" href="imagenes/favi.png" type="image/png" />
     <link rel="stylesheet" href="estilos/estilos.css">
     <title>Juego de Cartas</title>
    
@@ -121,7 +121,7 @@
     </div>
 
 
-    <script src="funcionalidad.js"></script>
+    <script src="js/funcionalidad.js"></script>
     
 </body>
 
