--- a/02.juegocartas/02.juegoparejas.html
+++ b/02.juegocartas/02.juegoparejas.html
@@ -22,7 +22,7 @@
             <img class="imagenLogo" src="imagenes/logo.png">
         </div>
         <div class="titulo">
-            <h1 class="esp">Juego de cartas </h1>          
+            <h1 id="titulo">Juego de cartas </h1>          
         </div>
 
     </div>
@@ -35,8 +35,8 @@
                     <th width="75px" rowspan="2">
                         <p id="usuario"></p>
                     </th>
-                    <th class="esp">Puntuación</th>
-                    <th class="esp">Fallos</th>
+                    <th id="puntuacion">Puntuación</th>
+                    <th id="fallosml">Fallos</th>
                 </tr>
                 <tr>
                     <th> <i class="fas fa-star-half-alt"></i><input type="text" value="0" id="marcador" disabled
@@ -48,8 +48,8 @@
         <div class="ranking">
             <table>
                 <tr>
-                    <th class="esp"> Mejor jugador:</th>                   
-                    <th class="esp"> Errores mejor jugador:</th>
+                    <th id="jugadorxml"> Mejor jugador:</th>                   
+                    <th id="erroresjugador"> Errores mejor jugador:</th>
                 </tr>
                 <tr>
                     <th id="godplayer"></th>
@@ -60,7 +60,7 @@
         <div class="idioma">
             <table>
                 <tr>
-                    <th class="esp" colspan="2">Idioma</th>                  
+                    <th id="idiomas" colspan="2">Idioma</th>                  
                 </tr>
                 <tr>
                     <td><button id="btnESP">ES</button></td>
@@ -90,29 +90,8 @@
             <div class="cartas" id="carta11"></div>
             <div class="cartas" id="carta12"></div>
         </div>
-        <div class="descripcion">
-            <p>Este juegazo de maquinas es solo para maquinas y apto para putisimos maquinas Lorem ipsum dolor sit amet
-                consectetur, adipisicing elit. lorem lorem lorem Lorem, ipsum dolor sit amet consectetur adipisicing
-                elit. Reiciendis asperiores temporibus id, ratione quia nostrum vel totam laudantium aliquid corporis.
-                Laborum voluptatem, quae rem nihil nobis earum eaque tenetur vitae. Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit. Dignissimos, tenetur et unde, cupiditate aut aperiam ab suscipit quod
-                officia earum amet, illum facere! Modi ex sit laboriosam est corrupti illo. Nulla enim deleniti,
-                necessitatibus omnis natus veniam nihil ipsa ratione ipsam similique! Porro reiciendis tempore natus
-                quos, itaque cupiditate labore nihil voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing
-                elit. Enim delectus iste, architecto distinctio cupiditate cumque voluptatem excepturi dolorum
-                explicabo, laboriosam iusto tempore ducimus aliquam in quae ipsa dolor et earum. Lorem ipsum dolor sit,
-                amet consectetur adipisicing elit. Officia ab repellendus rerum magni molestiae earum perferendis minus
-                maiores eligendi et at corrupti adipisci itaque, quis cum necessitatibus sunt optio consectetur. Lorem
-                ipsum dolor, sit amet consectetur adipisicing elit. Quaerat sequi velit necessitatibus ab officia
-                dignissimos porro corrupti omnis magnam, voluptas voluptates officiis doloribus minus magni. Suscipit
-                dicta tenetur assumenda nesciunt Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem quod
-                dolor odit non, reprehenderit ratione repudiandae, beatae voluptas laborum amet optio officia atque
-                dolores nihil repellendus eum? Illo, ad tenetur?Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Omnis voluptas accusantium quia, magnam asperiores, rerum expedita saepe nesciunt delectus dolor
-                nostrum, perferendis nihil. Cumque illum sequi excepturi? Atque, aliquam illum!loremlorem Lorem ipsum
-                dolor sit amet consectetur adipisicing elit. Necessitatibus dignissimos doloremque provident ullam
-                repellat ut aliquid quis perferendis, assumenda fuga laudantium quidem est accusantium corporis
-                similique optio eos numquam</p>
+        <div class="descripcion" id="desc">
+           
         </div>
     </div>
 
